<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_right_bg_img"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/设置"
        android:textSize="25sp"
        android:background="@drawable/border_bottom_bg_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:background="@drawable/border_bottom_bg_img">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="25sp"
                android:text="@string/双手模式" />

            <Switch
                android:id="@+id/switch_double_hand"
                android:layout_width="wrap_content"
                android:textOn="@string/双手"
                android:textOff="@string/单手"
                android:layout_height="match_parent" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/返回"
        android:textSize="20sp"
        android:id="@+id/button_setting_back" />

</LinearLayout>