<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_right_bg_img"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="40dp"
        android:gravity="center"
        android:orientation="vertical">


        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/button_input_panel_sign_start"
            android:scaleType="centerCrop"
            android:contentDescription="@string/手语识别"
            android:src="@mipmap/sign_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_input_state_tv"
            android:textSize="30sp"
            android:textColor="#ee000000"
            android:text="@string/手语识别"
            android:layout_marginBottom="40dp" />


        <com.github.scarecrow.signscognizing.adapters.VoiceRecordButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@mipmap/speech_icon"
            android:id="@+id/button_input_panel_voice_start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="#ee000000"
            android:text="@string/输入语音" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_input_panel_back"
        android:text="@string/返回"
        android:textSize="20sp"
        android:layout_gravity="end" />


</LinearLayout>