<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <!-- receive bubble-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_receive_view"
        android:visibility="gone"
        android:orientation="vertical">

        <!-- text display -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/bubble_recive">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:id="@+id/msg_content_receive"
                android:textSize="30sp" />
        </LinearLayout>
        <!-- sign confirm -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/sign_confirm_dialog">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_sign_confirm"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/是"
                    android:textColor="@color/colorPrimary"
                    android:padding="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp"
                    android:id="@+id/button_sign_confirm_yes" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="@string/否"
                    android:id="@+id/button_sign_confirm_no" />
            </LinearLayout>
        </LinearLayout>
        <!-- sign recapture -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/sign_recapture_dialog"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_sign_recapture"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/是"
                    android:textColor="@color/colorPrimary"
                    android:padding="10dp"
                    android:layout_marginRight="30sp"
                    android:layout_marginEnd="30dp"
                    android:id="@+id/button_sign_recapture_yes" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="@string/否"
                    android:id="@+id/button_sign_recapture_no" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <!-- send bubble-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_send_view"
        android:layout_gravity="end"
        android:orientation="vertical">

        <!-- text display -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bubble_send">

            <TextView
                android:id="@+id/msg_content_send"
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:text="sdfasfasdas"
                android:textColor="#000000"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_msg_type_display" />

    </LinearLayout>

</LinearLayout>